Fixed comments from the original project I created and I'm using to create this one

--- a/roles/build_ibi_awsami/defaults/main.yml
+++ b/roles/build_ibi_awsami/defaults/main.yml
@@ -1,12 +1,3 @@
 ---
-# defaults file for build_ibi_awsami
+# defaults file for build_aws_ami
 
-instance_name: 'AMI-IBI_v0.1'
-instance_type: 't2.xlarge'
-instance_role: 'biaas-tableau-role'    # When I can create roles we can launch using biaas-ibi-role or uniform to biaas-machine-role
-source_ami_id: 'ami-01e0935ec992d8ce5' # IES-GI-AWS-RHEL-7.6-20190402v2 - "SharedwithMe in AWS AMIs"
-kp_name: 'key-pair-biaas'
-sg_name: 'biaas-ibi-sg'
-subnets_prefix: "biaas-subnet"
-region: "eu-west-1"
-bi_provider: "ibi_webfocus"
