--- a/playbooks/build_aws_ami.yaml
+++ b/playbooks/build_aws_ami.yaml
@@ -3,6 +3,30 @@
 #
 # Notes:
 #  - The actions on started EC2 Instance are using paramiko for connectiviy and they requires the key-pair (.pem) to allow the connectivity
+#  - Expected "Extra Vars":
+#
+#     "{ extra_sec_group         : ,  
+#        extra_base_image        : , 
+#        extra_subnet_id         : ,
+#        extra_inst_type         : , 
+#        extra_region            : ,
+#        extra_inst_profile_name : , 
+#        extra_tags              : ,
+#        extra_key_name          : ,
+#        extra_ami_des           : ,
+#        extra_ami_name          : ,
+#        extra_apply_role        : ,
+#      }"
+#       
+#  - For extra_apply_role use a string with the desired "role to invoke" when main ec2 instance is created
+#
+#  - For extra_tags currently are expected: 
+#
+#     "{
+#       project: ,
+#       version: ,
+#       environment:  
+#      }"
 #
 
 - hosts: mylocalhost
@@ -15,7 +39,7 @@
   #  - The idea is pass vars using : vars: { <a var name>: "a value, that maybe could came from -e and be used as {{given var}}" }
   #
   roles:
-    - { role: build_aws_ami, vars: { aws_sec_group: "{{extra_sec_group}}",  aws_base_image: "{{extra_base_image}}" , aws_subnet_id: "{{extra_subnet_id}}" , aws_inst_type: "{{extra_inst_type}}" , aws_region: "{{extra_region}}", aws_inst_profile_name: "{{inst_profile_name}}", aws_inst_tags: "{{extra_tags}}", aws_key_name: "{{extra_key_name}}" }, build_aws_ami_action: create}
+    - { role: build_aws_ami, vars: { aws_sec_group: "{{extra_sec_group}}",  aws_base_image: "{{extra_base_image}}" , aws_subnet_id: "{{extra_subnet_id}}" , aws_inst_type: "{{extra_inst_type}}" , aws_region: "{{extra_region}}", aws_inst_profile_name: "{{extra_inst_profile_name}}", aws_inst_tags: "{{extra_tags}}", aws_key_name: "{{extra_key_name}}" }, build_aws_ami_action: create}
   tags: 'create'
 
 # This playbook execute the role for the "indicated product" on the temporal instance
@@ -26,31 +50,17 @@
 #    type of environments
 #
 - hosts: aws_ec2_hosts
-
   tasks:
-    - debug:
-        msg: 'Include here the task to execute on the ec2 instance - i.e: Lines Commented at the end of this file'
+    - include_role:
+        name: test_role
+      when: "extra_apply_role == 'test_role'"
+    #- include_role:
+    #    name: unicornio_role
+    #  when: "extra_apply_role == 'unicornio_role'"
 
 - hosts: mylocalhost
   connection: local
 
   roles:
-    - { role: build_aws_ami, vars: { aws_ami_des: "{{extra_ami_des}}", aws_ami_name: "{{extra_ami_name}}", aws_ami_region: "{{extra_ami_region}}", aws_ami_tags: "{{extra_ami_tags}}" }, build_aws_ami_action: finalize}
+    - { role: build_aws_ami, vars: { aws_ami_des: "{{extra_ami_des}}", aws_ami_name: "{{extra_ami_name}}", aws_ami_region: "{{extra_region}}", aws_ami_tags: "{{extra_tags}}" }, build_aws_ami_action: finalize}
   tags: 'finalize'
-
-
-## Example - Configure IBI WFS and WebClient
-#
-# - hosts: aws_ec2_hosts
-#   roles:
-#     - name: ibi_requirements
-#       tags: ibi_requirements
-
-#     - name: myjdkrole18
-#       tags: jdk18install
-
-#     - name: ibi_wfs_server
-#       tags: ibi_wfs_install
-
-#     - name: ibi_webclient
-#       tags: ibi_webclient_install
