--- a/inventories/create_ec2instanceforamibuild.yml
+++ b/inventories/create_ec2instanceforamibuild.yml
@@ -9,4 +9,5 @@ ansible_port=22
 ansible_user=ec2-user
 ansible_become=yes
 ansible_ssh_private_key_file="/ansible/inventories/private_keys_ami_build/aw_ami_creator.pem"
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
